--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:24:01 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:24:45 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -232,8 +232,8 @@ E thru 4</td>
 Not started</td>
       <td class="greyout leftborder">Tyrrell Hatton +1
 +1 thru 1</td>
-      <td class="greyout">Sam Burns +3
-Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -328,8 +328,8 @@ E thru 4</td>
 Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
-      <td class="greyout">Sam Burns +3
-Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -372,10 +372,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
-      <td>Sam Burns +3
+      <td>Brooks Koepka +3
 Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+      <td class="greyout leftborder">Sam Burns +4
++1 thru 1</td>
       <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
@@ -440,8 +440,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
 Not started</td>
-      <td class="greyout">Sam Burns +3
-Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -632,8 +632,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Brian Harman +2
 Not started</td>
-      <td class="greyout">Sam Burns +3
-Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -646,10 +646,10 @@ Not started</td>
 Not started</td>
       <td>Xander Schauffele +2
 Not started</td>
-      <td class="greyout leftborder">Sam Burns +3
+      <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
-      <td class="greyout">Brooks Koepka +3
-Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -790,10 +790,10 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout leftborder">Sam Burns +3
+      <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
-      <td class="greyout">Brooks Koepka +3
-Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -940,22 +940,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td>Xander Schauffele +2
-Not started</td>
-      <td>Sam Burns +3
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Justin Rose +5
-+1 thru 5</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">3</td>
       <td>Will Zalatoris -1
@@ -966,10 +950,10 @@ Not started</td>
 Not started</td>
       <td>Jordan Spieth +2
 Not started</td>
-      <td class="greyout leftborder">Sam Burns +3
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -1034,6 +1018,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">3</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td>Xander Schauffele +2
+Not started</td>
+      <td>Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout leftborder">Sam Burns +4
++1 thru 1</td>
+      <td class="greyout">Justin Rose +5
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
