--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:24:01 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:24:45 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,8 @@ E thru 4</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
-      <td class="greyout">Sam Burns +3
-Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
