--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:25:28 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:26:11 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,10 +166,10 @@ Not started</td>
 E thru 4</td>
       <td>Will Zalatoris -1
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +3
-+2 thru 4</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
+      <td class="greyout">Russell Henley +4
++3 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -1033,7 +1033,7 @@ Not started</td>
       <td class="greyout leftborder">Sam Burns +4
 +1 thru 1</td>
       <td class="greyout">Justin Rose +5
-+1 thru 5</td>
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
