--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:25:28 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:26:11 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -316,22 +316,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">0</td>
-      <td>Dustin Johnson -3
-Not started</td>
-      <td>Corey Conners -2
-E thru 4</td>
-      <td>Xander Schauffele(W) +2
-Not started</td>
-      <td>Russell Henley +3
-+2 thru 4</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -2
@@ -362,6 +346,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Robert MacIntyre +3
 +2 thru 6</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">1</td>
+      <td>Dustin Johnson -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 4</td>
+      <td>Xander Schauffele(W) +2
+Not started</td>
+      <td>Justin Thomas +4
+Not started</td>
+      <td class="greyout leftborder">Louis Oosthuizen +4
+Not started</td>
+      <td class="greyout">Russell Henley +4
++3 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
