--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:28:21 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:29:04 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,6 +172,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-6</td>
+      <td>Sungjae Im -5
+E thru 3</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Collin Morikawa +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+Not started</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith -4
@@ -183,22 +199,6 @@ Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
-Not started</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-5</td>
-      <td>Sungjae Im -4
-+1 thru 2</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
