--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:29:04 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:29:47 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -476,22 +476,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -2
-E thru 5</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Marc Leishman +1
-E thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -4
@@ -583,6 +567,22 @@ Not started</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
+Not started</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -2
+E thru 5</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Marc Leishman +2
++1 thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +2
 Not started</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
