--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:30:30 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:31:13 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -255,7 +255,7 @@ Not started</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson -3
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Viktor Hovland E
@@ -351,7 +351,7 @@ Not started</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -3
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -2
 E thru 5</td>
       <td>Xander Schauffele(W) +2
