--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:31:13 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:31:56 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -340,10 +340,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
-      <td>Billy Horschel +2
+      <td>Xander Schauffele +2
 Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
+      <td class="greyout leftborder">Billy Horschel +3
++1 thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -659,7 +659,7 @@ Not started</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Bubba Watson E
--1 thru 3</td>
+-1 thru 4</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
