--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:31:56 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:32:39 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -636,6 +636,22 @@ Not started</td>
 +1 thru 1</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">-3</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td class="greyout leftborder">Jon Rahm +2
+Not started</td>
+      <td class="greyout">Xander Schauffele +2
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -4
@@ -650,6 +666,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Sam Burns +4
 +1 thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -2
+E thru 5</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td class="greyout leftborder">Rory McIlroy +1
+Not started</td>
+      <td class="greyout">Xander Schauffele(W) +2
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -684,35 +716,19 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
+      <td>Tiger Woods(W) -1
 Not started</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
-      <td class="greyout">Xander Schauffele +2
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners -2
-E thru 5</td>
       <td>Will Zalatoris -1
 Not started</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td>Rory McIlroy +1
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td class="greyout leftborder">Rory McIlroy +1
 Not started</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-Not started</td>
-      <td class="greyout">Xander Schauffele(W) +2
+      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -764,19 +780,19 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-1</td>
-      <td>Tiger Woods(W) -1
+      <td>Corey Conners(W) -2
+E thru 5</td>
+      <td>Daniel Berger -1
 Not started</td>
-      <td>Will Zalatoris -1
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td>Robert MacIntyre +2
++1 thru 7</td>
+      <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td class="greyout leftborder">Collin Morikawa +1
-Not started</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
     <tr>
@@ -796,20 +812,52 @@ Not started</td>
 +1 thru 1</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td>Jon Rahm(W) +2
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+Not started</td>
+      <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">0</td>
-      <td>Corey Conners(W) -2
-E thru 5</td>
-      <td>Daniel Berger -1
+      <td>Patrick Cantlay -2
 Not started</td>
-      <td>Collin Morikawa +1
+      <td>Collin Morikawa(W) E
+-1 thru 1</td>
+      <td>Hideki Matsuyama E
 Not started</td>
-      <td>Robert MacIntyre +2
-+1 thru 7</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 Not started</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">0</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Collin Morikawa(W) E
+-1 thru 1</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +7
++4 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -844,38 +892,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Jon Rahm(W) +2
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
-      <td class="greyout">Brooks Koepka +3
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">1</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Collin Morikawa(W) +1
-Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">1</td>
       <td>Scottie Scheffler -3
@@ -892,22 +908,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">1</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Collin Morikawa(W) +1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Gary Woodland +7
-+4 thru 6</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">1</td>
       <td>Scottie Scheffler -3
@@ -921,6 +921,22 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">2</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td>Xander Schauffele +2
+Not started</td>
+      <td>Jordan Spieth +2
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -954,22 +970,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Sam Burns +4
 +1 thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">3</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Xander Schauffele +2
-Not started</td>
-      <td>Jordan Spieth +2
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -1037,11 +1037,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Viktor Hovland(W) E
 Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
       <td>Jon Rahm +2
 Not started</td>
       <td>Patrick Reed +2
