--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:31:56 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:32:39 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,6 +156,22 @@ Not started</td>
 +1 thru 1</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-7</td>
+      <td>Sungjae Im -5
+E thru 3</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+Not started</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler -3
@@ -169,22 +185,6 @@ Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-6</td>
-      <td>Sungjae Im -5
-E thru 3</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
@@ -204,6 +204,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td>Rory McIlroy +1
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele +2
+Not started</td>
+      <td class="greyout">Brooks Koepka +3
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -4
@@ -220,22 +236,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Rory McIlroy +1
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-Not started</td>
-      <td class="greyout">Brooks Koepka +3
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -249,6 +249,22 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 Not started</td>
       <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-3</td>
+      <td>Will Zalatoris -1
+Not started</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -284,22 +300,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Will Zalatoris -1
-Not started</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -3
@@ -317,13 +317,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Tony Finau -1
 Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
       <td>Jon Rahm(W) +2
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -333,13 +333,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Corey Conners(W) -2
 E thru 5</td>
       <td>Daniel Berger -1
 Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
       <td>Jon Rahm +2
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -364,6 +364,22 @@ Not started</td>
 +3 thru 5</td>
     </tr>
     <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">4</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 1</td>
+      <td>Jon Rahm +2
+Not started</td>
+      <td>Patrick Reed +2
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+Not started</td>
+      <td class="greyout">Luke List +5
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">4</td>
       <td>Corey Conners -2
@@ -377,22 +393,6 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Collin Morikawa +1
-Not started</td>
-      <td>Jon Rahm +2
-Not started</td>
-      <td>Patrick Reed +2
-E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
-      <td class="greyout">Luke List +5
 Not started</td>
     </tr>
   </tbody>
