--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:39:50 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:40:33 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -165,7 +165,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Russell Henley +4
@@ -181,7 +181,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Xander Schauffele(W) +2
@@ -213,7 +213,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Jon Rahm(W) +2
@@ -275,7 +275,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
@@ -293,7 +293,7 @@ Not started</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -309,7 +309,7 @@ E thru 6</td>
       <td>Webb Simpson -1
 E thru 3</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 Not started</td>
       <td class="greyout">Xander Schauffele +2
@@ -451,7 +451,7 @@ Not started</td>
       <td>Corey Conners(W) -2
 E thru 6</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +2
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
@@ -467,7 +467,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -483,7 +483,7 @@ Not started</td>
       <td>Matthew Fitzpatrick -1
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -547,7 +547,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +2
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
@@ -641,7 +641,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Collin Morikawa E
@@ -673,7 +673,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Collin Morikawa E
@@ -721,7 +721,7 @@ Not started</td>
       <td>Tiger Woods(W) -1
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Collin Morikawa E
@@ -865,7 +865,7 @@ Not started</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Jon Rahm +2
@@ -913,7 +913,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Xander Schauffele +2
 Not started</td>
       <td>Brooks Koepka +3
@@ -959,7 +959,7 @@ Not started</td>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">3</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Jon Rahm +2
@@ -991,7 +991,7 @@ Not started</td>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">3</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Jon Rahm(W) +2
@@ -1032,8 +1032,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Sam Burns +4
 +1 thru 1</td>
-      <td class="greyout">Justin Rose +5
-+1 thru 6</td>
+      <td class="greyout">Justin Rose +6
++2 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
