--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:39:50 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:40:33 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -179,7 +179,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Tony Finau -1
 Not started</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -227,7 +227,7 @@ Not started</td>
       <td>Matthew Fitzpatrick -1
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -255,7 +255,7 @@ Not started</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-3</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Daniel Berger -1
@@ -305,7 +305,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Will Zalatoris -1
-Not started</td>
+E thru 1</td>
       <td>Shane Lowry +1
 Not started</td>
       <td>Jon Rahm +2
