--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:40:33 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:41:16 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -154,6 +154,22 @@ E thru 6</td>
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-10</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 6</td>
+      <td>Tyrrell Hatton -1
+-1 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland(W) E
+Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -218,22 +234,6 @@ E thru 1</td>
 Not started</td>
       <td class="greyout">Jon Rahm(W) +2
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Corey Conners -2
-E thru 6</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td class="greyout leftborder">Tyrrell Hatton +1
-+1 thru 1</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
