--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:40:33 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:41:16 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -236,6 +236,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-4</td>
+      <td>Patrick Cantlay -2
+Not started</td>
+      <td>Corey Conners -2
+E thru 6</td>
+      <td>Tyrrell Hatton -1
+-1 thru 2</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm +2
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -281,22 +297,6 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm +2
 Not started</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
-Not started</td>
-      <td>Corey Conners -2
-E thru 6</td>
-      <td>Tyrrell Hatton +1
-+1 thru 1</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm +2
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
