--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:41:59 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:42:43 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -161,7 +161,7 @@ E thru 2</td>
       <td>Sungjae Im -5
 E thru 3</td>
       <td>Patrick Cantlay -2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Collin Morikawa E
@@ -177,7 +177,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris -1
 E thru 1</td>
       <td>Tony Finau -1
@@ -209,7 +209,7 @@ Not started</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Patrick Cantlay -2
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 1</td>
       <td>Rory McIlroy +1
@@ -239,7 +239,7 @@ Not started</td>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-4</td>
       <td>Patrick Cantlay -2
-Not started</td>
+E thru 1</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Tyrrell Hatton -1
@@ -257,7 +257,7 @@ Not started</td>
       <td>Dustin Johnson -3
 E thru 1</td>
       <td>Patrick Cantlay -2
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Jon Rahm +1
@@ -319,7 +319,7 @@ Not started</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
-Not started</td>
+E thru 1</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Collin Morikawa E
