--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:47:01 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:47:44 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -420,12 +420,12 @@ Not started</td>
 E thru 1</td>
       <td>Corey Conners -2
 E thru 6</td>
-      <td>Rory McIlroy +1
+      <td>Robert MacIntyre +1
+E thru 8</td>
+      <td class="greyout leftborder">Rory McIlroy +1
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td class="greyout">Jon Rahm +1
 -1 thru 1</td>
-      <td class="greyout">Robert MacIntyre +2
-+1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -740,10 +740,10 @@ E thru 6</td>
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 1</td>
-      <td>Jon Rahm +1
+      <td>Robert MacIntyre +1
+E thru 8</td>
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 1</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 thru 7</td>
       <td class="greyout">Jordan Spieth +2
 Not started</td>
     </tr>
