--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:47:01 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:47:44 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -342,10 +342,10 @@ Not started</td>
 -1 thru 1</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +2
+      <td class="greyout leftborder">Robert MacIntyre +1
+E thru 8</td>
+      <td class="greyout">Jordan Spieth +2
 Not started</td>
-      <td class="greyout">Robert MacIntyre +2
-+1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
