--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:52:45 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:53:28 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -265,7 +265,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -375,7 +375,7 @@ E thru 1</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -457,7 +457,7 @@ E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -551,7 +551,7 @@ Not started</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
@@ -585,7 +585,7 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
       <td class="greyout">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -649,7 +649,7 @@ E thru 8</td>
       <td class="greyout leftborder">Jon Rahm +1
 -1 thru 1</td>
       <td class="greyout">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -679,7 +679,7 @@ E thru 6</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -697,7 +697,7 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
       <td class="greyout">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -709,7 +709,7 @@ E thru 6</td>
       <td>Shane Lowry +1
 Not started</td>
       <td>Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -725,7 +725,7 @@ E thru 1</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td>Jordan Spieth(W) +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
       <td class="greyout">Brooks Koepka +3
@@ -741,7 +741,7 @@ E thru 1</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td>Jordan Spieth(W) +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Sam Burns +3
 E thru 2</td>
       <td class="greyout">Brooks Koepka +3
@@ -775,7 +775,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -791,7 +791,7 @@ Not started</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
@@ -805,7 +805,7 @@ E thru 1</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td>Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -869,7 +869,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 1</td>
       <td>Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas +4
@@ -917,7 +917,7 @@ E thru 1</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td>Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -935,7 +935,7 @@ Not started</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -967,7 +967,7 @@ Not started</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -1013,7 +1013,7 @@ E thru 1</td>
       <td>Viktor Hovland +2
 +2 thru 1</td>
       <td>Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Sam Burns +3
 E thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -1029,7 +1029,7 @@ E thru 1</td>
       <td>Viktor Hovland +2
 +2 thru 1</td>
       <td>Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas +4
@@ -1047,7 +1047,7 @@ Not started</td>
       <td>Patrick Reed +2
 E thru 5</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -1061,7 +1061,7 @@ Not started</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td>Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -1077,7 +1077,7 @@ Not started</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td>Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
