--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:52:45 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:53:28 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ E thru 6</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Sam Burns +3
 E thru 2</td>
     </tr>
@@ -279,7 +279,7 @@ E thru 1</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -295,7 +295,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brooks Koepka +3
 Not started</td>
     </tr>
@@ -313,7 +313,7 @@ Not started</td>
       <td class="greyout leftborder">Robert MacIntyre +1
 E thru 8</td>
       <td class="greyout">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -325,7 +325,7 @@ E thru 1</td>
       <td>Jon Rahm +1
 -1 thru 1</td>
       <td>Jordan Spieth(W) +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
       <td class="greyout">Brooks Koepka +3
@@ -343,7 +343,7 @@ E thru 6</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -373,7 +373,7 @@ E thru 6</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td>Jordan Spieth +2
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
