--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:54:11 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:54:54 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ E thru 6</td>
 -1 thru 3</td>
       <td class="greyout leftborder">Viktor Hovland(W) +2
 +2 thru 1</td>
-      <td class="greyout">Sam Burns +3
-E thru 2</td>
+      <td class="greyout">Sam Burns +4
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -360,8 +360,8 @@ Not started</td>
 -1 thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
-      <td class="greyout">Sam Burns +3
-E thru 2</td>
+      <td class="greyout">Sam Burns +4
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -388,10 +388,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 1</td>
-      <td>Sam Burns +3
-E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 Not started</td>
+      <td class="greyout leftborder">Sam Burns +4
++1 thru 3</td>
       <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
@@ -408,8 +408,8 @@ E thru 6</td>
 -1 thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
-      <td class="greyout">Sam Burns +3
-E thru 2</td>
+      <td class="greyout">Sam Burns +4
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -518,10 +518,10 @@ Not started</td>
 -1 thru 1</td>
       <td>Xander Schauffele +2
 E thru 1</td>
-      <td class="greyout leftborder">Sam Burns +3
-E thru 2</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -742,10 +742,10 @@ E thru 1</td>
 -1 thru 1</td>
       <td>Jordan Spieth(W) +2
 E thru 1</td>
-      <td class="greyout leftborder">Sam Burns +3
-E thru 2</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -760,8 +760,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
-      <td class="greyout">Sam Burns +3
-E thru 2</td>
+      <td class="greyout">Sam Burns +4
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -989,17 +989,17 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Rory McIlroy +1
 Not started</td>
       <td>Xander Schauffele +2
 E thru 1</td>
-      <td>Sam Burns +3
-E thru 2</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
+      <td>Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout leftborder">Sam Burns +4
++1 thru 3</td>
       <td class="greyout">Justin Rose +6
 +2 thru 7</td>
     </tr>
@@ -1014,10 +1014,10 @@ E thru 1</td>
 +2 thru 1</td>
       <td>Jordan Spieth +2
 E thru 1</td>
-      <td class="greyout leftborder">Sam Burns +3
-E thru 2</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
+      <td class="greyout">Sam Burns +4
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -1045,7 +1045,7 @@ Not started</td>
       <td>Viktor Hovland(W) +2
 +2 thru 1</td>
       <td>Patrick Reed +2
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
