--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:54:11 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:54:54 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,8 @@ E thru 6</td>
 E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
-      <td class="greyout">Sam Burns +3
-E thru 2</td>
+      <td class="greyout">Sam Burns +4
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -389,7 +389,7 @@ Not started</td>
       <td>Viktor Hovland(W) +2
 +2 thru 1</td>
       <td>Patrick Reed +2
-E thru 5</td>
+E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +3
 Not started</td>
       <td class="greyout">Luke List +5
