--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:54:54 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:55:37 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -349,19 +349,19 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Dustin Johnson -3
 E thru 2</td>
       <td>Corey Conners -2
 E thru 6</td>
       <td>Xander Schauffele(W) +2
 E thru 1</td>
-      <td>Justin Thomas +4
+      <td>Russell Henley +3
++2 thru 7</td>
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
-      <td class="greyout leftborder">Louis Oosthuizen +4
+      <td class="greyout">Louis Oosthuizen +4
 Not started</td>
-      <td class="greyout">Russell Henley +4
-+3 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
