--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:54:54 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 10:55:37 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,10 +182,10 @@ Not started</td>
 E thru 6</td>
       <td>Will Zalatoris -1
 E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td class="greyout leftborder">Russell Henley +3
++2 thru 7</td>
+      <td class="greyout">Brooks Koepka +3
 Not started</td>
-      <td class="greyout">Russell Henley +4
-+3 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
