--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:02:04 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:02:47 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -199,7 +199,7 @@ E thru 2</td>
       <td>Viktor Hovland(W) +2
 +2 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -217,7 +217,7 @@ E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -247,7 +247,7 @@ E thru 2</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -265,7 +265,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -279,7 +279,7 @@ Not started</td>
       <td>Collin Morikawa E
 -1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -297,7 +297,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -329,7 +329,7 @@ E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -391,7 +391,7 @@ Not started</td>
       <td>Patrick Reed +2
 E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Luke List +5
 Not started</td>
     </tr>
