--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:02:04 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:02:47 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -185,7 +185,7 @@ E thru 2</td>
       <td class="greyout leftborder">Russell Henley +3
 +2 thru 7</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -233,7 +233,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -249,7 +249,7 @@ E thru 2</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -281,7 +281,7 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -345,7 +345,7 @@ E thru 2</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -393,7 +393,7 @@ E thru 1</td>
       <td class="greyout leftborder">Billy Horschel +3
 +1 thru 2</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -409,7 +409,7 @@ E thru 1</td>
       <td class="greyout leftborder">Adam Scott +2
 Not started</td>
       <td class="greyout">Brooks Koepka(W) +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -437,7 +437,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 2</td>
       <td>Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Sam Burns +4
 +1 thru 3</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -473,7 +473,7 @@ Not started</td>
       <td class="greyout leftborder">Hideki Matsuyama E
 Not started</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -487,7 +487,7 @@ Not started</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Sam Burns +4
 +1 thru 3</td>
     </tr>
@@ -503,7 +503,7 @@ E thru 2</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -551,7 +551,7 @@ E thru 2</td>
       <td>Shane Lowry +1
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -647,7 +647,7 @@ Not started</td>
       <td>Viktor Hovland +2
 +2 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -665,7 +665,7 @@ E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -679,7 +679,7 @@ E thru 2</td>
       <td>Jordan Spieth(W) +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Sam Burns +4
 +1 thru 3</td>
     </tr>
@@ -697,7 +697,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -775,7 +775,7 @@ E thru 2</td>
       <td>Rory McIlroy +1
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -791,7 +791,7 @@ Not started</td>
       <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -839,7 +839,7 @@ E thru 1</td>
       <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -871,7 +871,7 @@ Not started</td>
       <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -889,7 +889,7 @@ E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -905,7 +905,7 @@ E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -935,7 +935,7 @@ E thru 1</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -949,7 +949,7 @@ E thru 2</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td>Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen +4
@@ -967,7 +967,7 @@ E thru 1</td>
       <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -1015,7 +1015,7 @@ E thru 2</td>
       <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -1049,7 +1049,7 @@ E thru 6</td>
       <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
       <td class="greyout">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
@@ -1063,7 +1063,7 @@ E thru 1</td>
       <td>Jordan Spieth +2
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -1093,7 +1093,7 @@ Not started</td>
       <td>Xander Schauffele +2
 E thru 1</td>
       <td>Brooks Koepka +3
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 Not started</td>
       <td class="greyout">Justin Thomas +4
