--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:05:39 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:06:22 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -165,11 +165,11 @@ Not started</td>
       <td>Corey Conners -2
 E thru 7</td>
       <td>Tyrrell Hatton -1
--1 thru 3</td>
+-1 thru 4</td>
       <td class="greyout leftborder">Viktor Hovland(W) +2
 +2 thru 1</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 3</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -312,8 +312,8 @@ Not started</td>
 -2 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 3</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -360,8 +360,8 @@ E thru 7</td>
 -2 thru 2</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 3</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -438,10 +438,10 @@ Not started</td>
 E thru 2</td>
       <td>Brooks Koepka +3
 E thru 1</td>
-      <td class="greyout leftborder">Sam Burns +4
-+1 thru 3</td>
-      <td class="greyout">Louis Oosthuizen +4
+      <td class="greyout leftborder">Louis Oosthuizen +4
 Not started</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -488,8 +488,8 @@ Not started</td>
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 1</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 3</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -533,7 +533,7 @@ E thru 7</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Marc Leishman +2
-+1 thru 4</td>
++1 thru 5</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 1</td>
       <td class="greyout">Justin Thomas +4
@@ -680,8 +680,8 @@ E thru 2</td>
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 1</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 3</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -808,8 +808,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 1</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 3</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -1000,8 +1000,8 @@ E thru 2</td>
 E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Sam Burns +4
-+1 thru 3</td>
+      <td class="greyout">Sam Burns +5
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -1030,8 +1030,8 @@ E thru 1</td>
 E thru 1</td>
       <td>Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout leftborder">Sam Burns +4
-+1 thru 3</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 thru 4</td>
       <td class="greyout">Justin Rose +6
 +2 thru 8</td>
     </tr>
