--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:06:22 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:07:05 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -310,10 +310,10 @@ Not started</td>
 -1 thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
-E thru 8</td>
-      <td class="greyout">Jordan Spieth +2
+      <td class="greyout leftborder">Jordan Spieth +2
 E thru 1</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
