--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:06:22 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:07:05 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -374,10 +374,10 @@ E thru 2</td>
 E thru 7</td>
       <td>Jon Rahm E
 -2 thru 2</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
-E thru 8</td>
-      <td class="greyout">Rory McIlroy +1
+      <td class="greyout leftborder">Rory McIlroy +1
 E thru 1</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -598,8 +598,8 @@ Not started</td>
 -1 thru 2</td>
       <td>Jon Rahm E
 -2 thru 2</td>
-      <td class="greyout leftborder">Robert MacIntyre +1
-E thru 8</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 thru 9</td>
       <td class="greyout">Jordan Spieth +2
 E thru 1</td>
     </tr>
@@ -611,7 +611,7 @@ Not started</td>
       <td>Jon Rahm(W) E
 -2 thru 2</td>
       <td>Bubba Watson E
--1 thru 5</td>
+-1 thru 6</td>
       <td>Rory McIlroy +1
 E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland +2
