--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:22:08 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:22:51 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -588,6 +588,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Bubba Watson -1
+-2 thru 7</td>
+      <td>Jon Rahm(W) E
+-2 thru 3</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 2</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson -4
@@ -666,22 +682,6 @@ Not started</td>
 E thru 2</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 3</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Bubba Watson E
--1 thru 6</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
