--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:32:11 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:32:54 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -349,19 +349,19 @@ E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Dustin Johnson -4
 -1 thru 4</td>
       <td>Corey Conners -3
 -1 thru 8</td>
       <td>Xander Schauffele(W) +2
 E thru 3</td>
-      <td>Russell Henley +3
-+2 thru 8</td>
-      <td class="greyout leftborder">Justin Thomas +4
+      <td>Justin Thomas +4
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
+      <td class="greyout leftborder">Louis Oosthuizen +4
 Not started</td>
+      <td class="greyout">Russell Henley +4
++3 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
